--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/deedenn/finspot-backend#readme",
   "dependencies": {
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.3",
@@ -28,6 +29,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "validator": "^13.12.0"
   }
